# sde_simulator

./: .gitignore  LICENSE  README.md
ornstein_uhlenbeck/: Cargo.toml  parameters.json  stochastic_processes.json
ornstein_uhlenbeck/src/: lib.rs  main.rs
ornstein_uhlenbeck/src/configs/: mod.rs  ou_config.rs
pages/: index.html  styles.css
