[package]
name = "ornstein_uhlenbeck"
version = "0.1.0"
edition = "2021"
description = "An sde simulator with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/polynominom/sde_simulator"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand_distr = "0.4.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }